# sc-python

./: .gitignore  README.md  logging.yaml  pyproject.toml  sonar-project.properties
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
src/sc_python/: __init__.py  sc_api.py  sc_statuspage_api.py
test/: test_sc_api.py
tests/: test_sc_api.py  test_sc_statuspage_api.py
